# detr_app

./: .gitignore  README.md  app.py  pyproject.toml  run_app.sh
src/: detr_model.py  sample_images.py
